# Operating-Systems

./: README.md  lab1.md  lab2.md
lab1/: Config.cpp  Config.h  Daemon.cpp  Daemon.h  Daemonizer.cpp  Daemonizer.h  PidManager.cpp  PidManager.h  build.sh  config.txt  main.cpp  mydaemon
lab2/: CMakeLists.txt  build.sh  client.cpp  common.h  conn.h  conn_fifo.cpp  conn_mq.cpp  conn_seg.cpp  host.cpp  lab2.md
